--- a/app/views/interested_people/new.html.erb
+++ b/app/views/interested_people/new.html.erb
@@ -1,11 +1,20 @@
 <%= t 'interested_person.create.introduction' %>
 
-<%= form_for InterestedPerson.new do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+<%= form_for @interested_person do |f| %>
+  <% if @interested_person.errors.present? %>
+    <div class='formErrors'>
+      <%= @interested_person.errors.full_messages %>
+    </div> 
+  <% end %>
+  <div>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
 
-  <%= f.label :email %>
-  <%= f.text_field :email %>
+  <div>
+    <%= f.label :email %>
+    <%= f.text_field :email %>
+  </div>
 
-  <%= f.submit %>
+  <%= f.submit 'Sign up' %>
 <% end %>
