update spec to look for I18n message

--- a/spec/dummy/app/views/home/index.html.erb
+++ b/spec/dummy/app/views/home/index.html.erb
@@ -1,3 +1,9 @@
+<div id='flash'>
+  <% if notice.present? %>
+    <%= notice %>
+  <% end %>
+</div>
+
 Welcome
 
 <%= form_for InterestedPerson.new do |f| %>
